--- a/system_huellitas/resources/css/admin/table_styles.css
+++ b/system_huellitas/resources/css/admin/table_styles.css
@@ -2,3 +2,7 @@ th{
     --bs-table-color: var(--bs-light);
     background-image: linear-gradient(180deg, rgb(238, 150, 75), rgba(235, 195, 81, 1));
 }
+
+.btn {
+    background-image: none;
+}
