--- a/system_huellitas/views/admin/dashboard.html
+++ b/system_huellitas/views/admin/dashboard.html
@@ -17,9 +17,12 @@
 
 <body>
     <!-- Insertar nuestro navbar a esta pantalla usando js -->
-    <div id="navbar"></div>
+    <header>
+        <div id="navbar"></div>
+    </header>
     <main>
         <div class="container_one p-4 ">
+            <!-- Contenedor que tiene el saludo de bienvenida e input de búsqueda -->
             <div class="shadow p-4 mt-5  mb-3 bg-yellow-color rounded-4">
                 <div class="row d-flex justify-content-center align-items-center gy-2">
                     <div class="col-auto">
@@ -31,9 +34,12 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-12 col-md-4">
-                                <form class="d-flex" role="search" id="searchDashboard">
-                                    <input class="form-control me-2 bg-white" type="search" aria-label="Search" id="search">
-                                    <button class="btn btn-orange-color text-light" type="submit">Buscar</button>
+                                <!-- Input para buscador -->
+                                <form class="d-flex" id="searchDashboard" name="search_dashboard">
+                                    <input class="form-control me-2 bg-white" role="search" type="search"
+                                        aria-label="Search" id="search_input" name="searchInput">
+                                    <button class="btn btn-orange-color text-light" type="submit"
+                                        id="btn_buscador_dashboard" name="btnBuscadorDashboard">Buscar</button>
                                 </form>
                             </div>
                         </div>
@@ -54,7 +60,6 @@
                             aria-expanded="false">
                             Septiembre
                         </a>
-
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Enero</a></li>
                             <li><a class="dropdown-item" href="#">Febrero</a></li>
@@ -63,21 +68,24 @@
                     </div>
                 </div>
             </div>
-            <div class="row p-3 mb-2 gy-4">
+            <!-- Contiene la gráfica e información de perfil del admin -->
+            <!-- gráfica -->
+            <div class="row p-3 gy-4">
                 <div class="col-sm-12 col-md-8 col-lg-8">
                     <div class="shadow p-4 bg-terciary rounded">
-                        <canvas id="myChart" width="1000px" height="400px"></canvas>
+                        <canvas id="myChart"></canvas>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-4 container bg-skin-color p-3 rounded-4">
-                    <div class="row ">
+                <!-- Información del perfil de admin -->
+                <div class="col-sm-12 col-md-4 bg-skin-color p-3 rounded-4 d-flex align-items-center">
+                    <div class="col">
                         <div class="row p-4 d-flex justify-content-center align-items-center">
                             <div class="d-flex justify-content-center align-items-center">
                                 <img class="picture rounded-circle" src="../../resources/img/png/picture.png">
                             </div>
                             <div class="d-flex justify-content-center align-items-center mt-3">
                                 <a href="../../views/admin/settings.html"
-                                    class="button1 btn btn-red-color text-light p-2 rounded-5">Ver mi perfil</a>
+                                    class="btn btn-red-color text-light p-2 rounded-5">Ver mi perfil</a>
                             </div>
                             <div class="d-flex justify-content-center align-items-center">
                                 <p class="fw-semibold fs-5 mt-3 mb-1">María Eugenia Castro</p>
@@ -89,46 +97,53 @@
                     </div>
                 </div>
             </div>
+            <!-- Información de las ventas contenidas en una row-->
             <div class="row p-3 justify-content-center gy-4">
+                <!-- Col 1 -->
                 <div class="col-md-3 col-lg-3 col-sm-12 bg-orange-color shadow p-3 rounded-4">
                     <div class="d-flex align-items-center p-2">
-                        <img src="../../resources/img/svg/people.svg" alt="">
+                        <img class="me-3" src="../../resources/img/svg/people.svg" alt="">
                         <span class="fw-semibold text-light fs-4">Nuevos usuarios</span>
                     </div>
-                    <p class="d-flex align-items-center justify-content-center fs-1 fw-bold text-light">5</p>
+                    <p class="text d-flex align-items-center justify-content-center fw-bold text-light">5</p>
                 </div>
-                <div class="col-md-3 col-lg-3 col-sm-12 bg-orange-color rounded-4 mx-5 shadow p-3 rounded-4">
+                <!-- Col 2 -->
+                <div class="col-md-4 col-lg-4 col-sm-12 bg-orange-color rounded-4 mx-5 shadow p-3 rounded-4">
                     <div class="d-flex align-items-center p-2">
-                        <img src="../../resources/img/svg/orders_white.svg" alt="">
-                        <span class="fw-semibold text-light fs-4">Producto más vendido</span>
+                        <img class="me-3" src="../../resources/img/svg/orders_white.svg" alt="">
+                        <span class="fw-semibold text-light fs-4 ">Producto más vendido</span>
                     </div>
                     <div class="p-3">
                         <p class=" fs-5 fw-light text-light mb-0">Alimentación</p>
                         <img src="../../resources/img/svg/line.svg" alt="">
                         <p class=" fs-5 fw-semibold text-light">Saco de Pedigree</p>
                     </div>
-                    </div>
-                <div class="col-md-3 col-lg-3 col-sm-12 bg-orange-color rounded-4 overflow-auto shadow p-3 rounded-4">
+                </div>
+                <!-- Col 3 -->
+                <div class="col-md-4 col-lg-4 col-sm-12 bg-orange-color rounded-4 overflow-auto shadow p-3 rounded-4">
                     <div class="d-flex align-items-center p-2 grid gap-2">
-                        <img src="../../resources/img/svg/edit.svg" alt="">
+                        <img class="me-3" src="../../resources/img/svg/edit.svg" alt="">
                         <span class="fw-semibold text-light fs-4">Categorías</span>
+                        <!-- Con d-none d-lg-block el boton no se vera en pantallas pequeñas -->
                         <a href="../../views/admin/scrud_categorias.html"
-                        class="button1 btn btn-light text-orange-color p-2 rounded-5 mx-3">Ver más</a>
+                            class="btn btn-light text-orange-color p-2 rounded-5 mx-3 d-none d-lg-block">Ver más</a>
                     </div>
+                    <!-- Lista de categorías -->
                     <div class="third_col">
+                        <!-- list-group-flush eliminar todos los bordes redondeados  -->
                         <ul class="list-group list-group-flush ">
                             <li class="list-group-item">Salud y cuidado</li>
                             <li class="list-group-item">Alimentación</li>
                             <li class="list-group-item">Entretenimiento</li>
-                          </ul>
+                        </ul>
                     </div>
                 </div>
             </div>
-        </div>
-        <script type="text/javascript" src="../../resources/js/chart.umd.js"></script>
+            <script type="text/javascript" src="../../resources/js/chart.umd.js"></script>
     </main>
     <!-- Agregamos el framework de boostrap - js -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Agregamos los componentes / gráfica -->
     <script src="../../controllers/utils/components.js"></script>
     <!-- Agregamos la ruta para agregar el menu -->
     <script src="../../controllers/utils/admin.js"></script>
