--- a/system_huellitas/views/admin/scrud_admin.html
+++ b/system_huellitas/views/admin/scrud_admin.html
@@ -19,6 +19,7 @@
 
 <body>
     <header>
+        <!-- Insertar nuestro navbar a esta pantalla usando js -->
         <div id="navbar"></div>
         <div class="container p-2 mt-5">
             <div class="row mt-5">
@@ -40,7 +41,7 @@
                 <div class="col-md-6 col-lg-6">
                     <form class="d-flex" role="search" id="search_productos_perros">
                         <input class="form-control rounded-4 shadow bg-white" type="search" aria-label="Search"
-                            id="search" placeholder="Buscar...">
+                            id="search" name="search" placeholder="Buscar...">
                     </form>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">
@@ -146,10 +147,12 @@
                     <div class="container text-center text-md-start text-lg-start">
                         <div class="row align-items-center gy-3">
                             <div class="col-sm-12 col-md-auto">
-                                <img class="rounded-1" src="../../resources/img/png/rectangulo.png" width="120px">
+                                <img class="rounded-1" id="img_admin" src="../../resources/img/png/rectangulo.png"
+                                    width="120px">
                             </div>
                             <div class="col">
-                                <button type="button" class="btn btn-red-color text-light" id="btn_cargarImagen">Cargar
+                                <button type="button" class="btn btn-red-color text-light" id="btn_cargarImagen"
+                                    name="btCargarImg">Cargar
                                     imagen</button>
                             </div>
                         </div>
@@ -163,23 +166,23 @@
                                     <input type="text" class="form-control" id="nombre_admin" name="nombre_admin">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="nombre_admin" class="form-label fw-semibold">Apellidos</label>
-                                    <input type="text" class="form-control" id="nombre_admin" name="nombre_admin">
+                                    <label for="apellido_admin" class="form-label fw-semibold">Apellidos</label>
+                                    <input type="text" class="form-control" id="apellido_admin" name="apellido_admin">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="nombre_admin" class="form-label fw-semibold">Contraseña</label>
-                                    <input type="password" class="form-control" id="nombre_admin" name="nombre_admin">
+                                    <label for="contra_admin" class="form-label fw-semibold">Contraseña</label>
+                                    <input type="password" class="form-control" id="contra_admin" name="contra_admin">
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-6 col-lg-6">
                                 <div class="mb-3">
-                                    <label for="nombre_admin" class="form-label fw-semibold">Correo electrónico</label>
-                                    <input type="email" class="form-control" id="nombre_admin"
-                                        placeholder="admin@gmail.com" name="nombre_admin">
+                                    <label for="email_admin" class="form-label fw-semibold">Correo electrónico</label>
+                                    <input type="email" class="form-control" id="email_admin"
+                                        placeholder="admin@gmail.com" name="email_admin">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="nombre_admin" class="form-label fw-semibold">Alías</label>
-                                    <input type="text" class="form-control" id="nombre_admin" name="nombre_admin">
+                                    <label for="alias_admin" class="form-label fw-semibold">Alías</label>
+                                    <input type="text" class="form-control" id="alias_admin" name="alias_admin">
                                 </div>
                             </div>
 
@@ -219,7 +222,8 @@
                                 <img class="rounded-1" src="../../resources/img/png/rectangulo.png" width="120px">
                             </div>
                             <div class="col">
-                                <button type="button" class="btn btn-red-color text-light" id="btn_cargarImagen">Cargar
+                                <button type="button" class="btn btn-red-color text-light" id="btn_cargarImagen"
+                                    name="btnCargarImg">Cargar
                                     imagen</button>
                             </div>
                         </div>
@@ -233,27 +237,27 @@
                                     <input type="text" class="form-control" id="nombre_admin" name="nombre_admin">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="nombre_admin" class="form-label fw-semibold">Apellidos</label>
-                                    <input type="text" class="form-control" id="nombre_admin" name="nombre_admin">
+                                    <label for="apellido_admin" class="form-label fw-semibold">Apellidos</label>
+                                    <input type="text" class="form-control" id="apellido_admin" name="apellido_admin">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="nombre_admin" class="form-label fw-semibold">Contraseña</label>
-                                    <input type="password" class="form-control" id="nombre_admin" name="nombre_admin">
+                                    <label for="contra_admin" class="form-label fw-semibold">Contraseña</label>
+                                    <input type="password" class="form-control" id="contra_admin" name="contra_admin">
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-6 col-lg-6">
                                 <div class="mb-3">
                                     <label for="fecha_admin" class="form-label fw-semibold">Fecha de registro</label>
-                                    <input type="text" class="form-control" aria-label="Disabled input example" disabled
+                                    <input type="date" class="form-control" aria-label="Disabled input example" disabled
                                         name="fechaAdmin" id="fecha_admin">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="nombre_admin" class="form-label fw-semibold">Correo electrónico</label>
-                                    <input type="email" class="form-control" id="nombre_admin" name="nombre_admin">
+                                    <label for="email_admin" class="form-label fw-semibold">Correo electrónico</label>
+                                    <input type="email" class="form-control" id="email_admin" name="email_admin">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="nombre_admin" class="form-label fw-semibold">Alías</label>
-                                    <input type="text" class="form-control" id="nombre_admin" name="nombre_admin">
+                                    <label for="alias_admin" class="form-label fw-semibold">Alías</label>
+                                    <input type="text" class="form-control" id="alias_admin" name="alias_admin">
                                 </div>
                             </div>
 
@@ -261,9 +265,10 @@
                     </div>
             </div>
             <div class="container text-center mb-4 mt-4">
-                <button type="button" class="btn btn-orange-color text-light me-3"
-                    data-bs-dismiss="modal">Guardar</button>
-                <button type="button" class="btn btn-red-color text-light">Cancelar</button>
+                <button type="button" class="btn btn-orange-color text-light me-3" data-bs-dismiss="modal"
+                    id="btn_guardar" name="btnGuardar">Guardar</button>
+                <button type="button" class="btn btn-red-color text-light" id="btnCancelar"
+                    name="btnCancelar">Cancelar</button>
             </div>
             </form>
         </div>
@@ -293,30 +298,35 @@
                             <div class="col-12">
                                 <div class="form-check form-switch mb-3">
                                     <label class="form-check-label" for="flexSwitchCheckChecked">Permiso 1</label>
-                                    <input class="form-check-input bg-orange-color" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>                                  
-                                  </div>
-                                  <div class="form-check form-switch mb-3">
+                                    <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
+                                        id="switch1" name="switch1" checked>
+                                </div>
+                                <div class="form-check form-switch mb-3">
                                     <label class="form-check-label" for="flexSwitchCheckChecked">Permiso 1</label>
-                                    <input class="form-check-input bg-orange-color" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>                                  
-                                  </div>
+                                    <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
+                                        id="switch2" name="switch2" checked>
+                                </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-check form-switch mb-3">
-                                    <input class="form-check-input bg-orange-color" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked> 
-                                    <label class="form-check-label" for="flexSwitchCheckChecked">Permiso 2</label>                    
-                                  </div>
-                                  <div class="form-check form-switch mb-3">
-                                    <input class="form-check-input bg-orange-color" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked> 
-                                    <label class="form-check-label" for="flexSwitchCheckChecked">Permiso 2</label>                    
-                                  </div>
+                                    <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
+                                        id="switch3" name="switch3" checked>
+                                    <label class="form-check-label" for="flexSwitchCheckChecked">Permiso 2</label>
+                                </div>
+                                <div class="form-check form-switch mb-3">
+                                    <input class="form-check-input bg-orange-color" type="checkbox" role="switch"
+                                        id="switch4" name="switch4" checked>
+                                    <label class="form-check-label" for="flexSwitchCheckChecked">Permiso 2</label>
+                                </div>
                             </div>
                         </div>
                     </div>
             </div>
             <div class="container text-center mb-4 mt-4">
-                <button type="button" class="btn btn-orange-color text-light me-3"
-                    data-bs-dismiss="modal">Guardar</button>
-                <button type="button" class="btn btn-red-color text-light">Cancelar</button>
+                <button type="button" class="btn btn-orange-color text-light me-3" data-bs-dismiss="modal"
+                    id="btn_guardar" name="btnGuardar">Guardar</button>
+                <button type="button" class="btn btn-red-color text-light" id="btn_cancelar"
+                    name="btnCancelar">Cancelar</button>
             </div>
             </form>
         </div>
