Inputs y name agregados

--- a/system_huellitas/views/admin/scrud_productos_gatos.html
+++ b/system_huellitas/views/admin/scrud_productos_gatos.html
@@ -139,7 +139,7 @@
                         aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form action="" id="crear_admin">
+                    <form action="" id="crear_producto_gato">
                         <!-- Fila 1 -->
                         <div class="container text-center text-md-start text-lg-start">
                             <div class="row align-items-center gy-3">
